--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "cdhydro"
 version = "0.1.0"
-authors = ["Ryan WS <jwestern@uoguelph.ca>"]
+authors = ["Ryan WS <wester5@clemson.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ndarray = "0.15.1"
+unittest = "0.1.0"
+ndarray-npy = "0.8.0"
